# University-programming

./: .gitignore  README.md
StackArrT/: CMakeLists.txt  stackarrt.hpp  test_stackarrt.cpp
complex_prj/: CMakeLists.txt  complex_test.cpp
complex_prj/complex/: CMakeLists.txt  complex.cpp  complex.hpp
dynamic_array/: dynamic_array.cpp  dynamic_array.hpp  test.cpp
first_class/: rectangle.cpp
hash_table/: CMakeLists.txt  hash_table.hpp  test_hashtable.cpp
kr_1/: CmakeLists.txt  test_dequeue.cpp
opencv_1/: README.md
opencv_1/task1/: CMakeLists.txt  build.sh  chessboard  chessboard.cpp  convert_to_png.sh  generate_chessboard.sh  lab1
opencv_1/task1/images/: chessboard.ppm
opencv_1/task1/images_chess/: chess_rect.ppm
opencv_1/task2/: CMakeLists.txt  build.sh  lab1  spiral_generator.cpp
opencv_2/task1/: CMakeLists.txt  README.md  build.sh  lab2.cpp
opencv_2/task2/: CMakeLists.txt  README.md  build.sh  kernel_blur.txt  kernel_edge_detection.txt  kernel_emboss.txt  kernel_sharpen.txt  lab2.cpp
stack_base_prj/: CMakeLists.txt  stack_arr_t.hpp  stack_base.hpp  stack_lst_t.hpp  test_stackarrt.cpp  test_stacklstt.cpp
